syntax = "proto3";
package obadafoundation.obit.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "obadafoundation/obit/v1/nft.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/query/v1/query.proto";

option go_package = "github.com/obada-foundation/fullcore/x/obit/types";

// Query defines the gRPC querier service.
service Query {
  // QueryGetAllNFTByAddressRequest returns a list of NFTs ownerd by given
  // address
  rpc GetNFTByAddress(QueryGetNFTByAddressRequest)
      returns (QueryGetNFTByAddressResponse) {

    option (cosmos.query.v1.module_query_safe) = true;
    option (google.api.http).get =
        "/obada-foundation/fullcore/nft/{address}/all";
  }

  // GetNft returns single NFT by DID
  rpc GetNFT(QueryGetNFTRequest) returns (QueryGetNFTResponse) {

    option (cosmos.query.v1.module_query_safe) = true;
    option (google.api.http).get = "/obada-foundation/fullcore/nft/{id}";
  }
}

// QueryGetNFTRequest is the request type for the Query.GetNFT method.
message QueryGetNFTRequest {
  // NFT ID (DID)
  string id = 1;
}

// QueryGetNFTResponse is the response type for the Query.GetNFT method.
message QueryGetNFTResponse {
  // NFT with the given ID
  NFT nft = 1 [ (gogoproto.nullable) = false ];
}

// QueryGetNFTByAddressRequest is the request type for the Query.GetNFTByAddress
message QueryGetNFTByAddressRequest {
  // Bech32 address
  string address = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
}

// QueryGetNFTByAddressResponse is the response type for the
// Query.GetNFTByAddress
message QueryGetNFTByAddressResponse {
  // List of NFTs owned by the given address
  repeated NFT nft = 1 [ (gogoproto.nullable) = false ];
}
