syntax = "proto3";
package obadafoundation.fullcore.obit;

import "google/protobuf/any.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/obada-foundation/fullcore/x/obit/types";

message NFT {
  string class_id = 1;
  string id = 2;
  string uri = 3;
  string uri_hash = 4;
  google.protobuf.Any data = 10;
}

message NFTData { string usn = 1; }